# baobab-probability-core

./: .flake8  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_dev_constraints.md  01_specifications.md  dev_diary.md  release_validation.md
docs/releases/: v1.0.0.md
src/baobab_probability_core/: __init__.py
src/baobab_probability_core/combinatorics/: __init__.py  arrangement_calculator.py  combination_calculator.py  factorial_calculator.py  permutation_calculator.py
src/baobab_probability_core/comparison/: __init__.py  distribution_comparison_result.py  goodness_of_fit_calculator.py  probability_comparison_result.py  theoretical_observation_comparator.py
src/baobab_probability_core/constants/: __init__.py  mathematical_constants.py
src/baobab_probability_core/distributions/: __init__.py  base_distribution.py  bernoulli_distribution.py  binomial_distribution.py  geometric_distribution.py  hypergeometric_distribution.py  poisson_distribution.py
src/baobab_probability_core/exceptions/: __init__.py  baobab_probability_core_exception.py  incompatible_observation_exception.py  invalid_combinatorial_parameter_exception.py  invalid_distribution_parameter_exception.py  invalid_probability_value_exception.py  invalid_sample_exception.py  unsupported_experiment_exception.py
src/baobab_probability_core/probability/: __init__.py  bayes_calculator.py  conditional_probability_calculator.py  event.py  finite_probability_space.py  independence_checker.py  probability_calculator.py
src/baobab_probability_core/simulation/: __init__.py  bernoulli_simulator.py  binomial_simulator.py  dice_roll_simulator.py  random_generator.py  simulation_config.py  simulation_result.py  urn_draw_simulator.py
src/baobab_probability_core/statistics/: __init__.py  descriptive_statistics.py  distribution_observation.py  empirical_moment_calculator.py  frequency_analyzer.py
src/baobab_probability_core/utils/: __init__.py  floating_point_comparator.py
src/baobab_probability_core/validators/: __init__.py  distribution_parameter_validator.py  probability_validator.py  sample_validator.py
tests/: __init__.py
tests/baobab_probability_core/combinatorics/: test_arrangement_calculator.py  test_combination_calculator.py  test_factorial_calculator.py  test_permutation_calculator.py
(+37 files in other folders)
