[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baobab-probability-core"
version = "1.0.0"
description = "Noyau Python pour probabilités discrètes, simulations et comparaison théorie/observation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Baobab" }]
keywords = ["probability", "statistics", "simulation", "discrete"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-probability-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"baobab_probability_core" = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "pylint>=3.0",
    "mypy>=1.8",
    "flake8>=7.0",
    "bandit>=1.7",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(\n  \\.eggs\n  | \\.git\n  | \\.mypy_cache\n  | \\.pytest_cache\n)/\n"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["baobab_probability_core"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=baobab_probability_core",
    "--cov-report=term-missing",
    "--cov-report=html:docs/tests/coverage/html",
    "--cov-report=xml:docs/tests/coverage/coverage.xml",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["src/baobab_probability_core"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.pylint.main]
max-line-length = 100
ignore-paths = ["tests"]

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "duplicate-code",
]

[tool.bandit]
exclude_dirs = ["tests"]
